@@ -901,20 +901,26 @@ loop:       for(int i = 0; i < str.length(); i++)
      */
     public static String buildToVersion(String build)
     {
-        if(build.length() != 11)
+        if (build.length() != 11) {
             return "<unknown version: " + build + ">";
-        // First 2 chars are the major version number
-        int major = Integer.parseInt(build.substring(0,2));
-        // Second 2 are the minor number
-        int minor = Integer.parseInt(build.substring(3,5));
-        // Then the pre-release status
-        int beta = Integer.parseInt(build.substring(6,8));
-        // Finally the bug fix release
-        int bugfix = Integer.parseInt(build.substring(9,11));
-
-        return "" + major + "." + minor
-            + (beta != 99 ? "pre" + beta :
-            (bugfix != 0 ? "." + bugfix : "beta"));
+        }
+        try {
+            // First 2 chars are the major version number
+            int major = Integer.parseInt(build.substring(0,2));
+            // Second 2 are the minor number
+            int minor = Integer.parseInt(build.substring(3,5));
+            // Then the pre-release status
+            int beta = Integer.parseInt(build.substring(6,8));
+            // Finally the bug fix release
+            int bugfix = Integer.parseInt(build.substring(9,11));
+    
+            return "" + major + "." + minor +
+                (beta != 99 ? " pre" + beta :
+                (bugfix != 0 ? "." + bugfix : "") +
+                (major >= 1 ? " final" : " beta"));
+        } catch (NumberFormatException e) {
+            return "<unknown version: " + build + ">";
+        }
     } //}}}
 
    // //{{{ isToolsJarAvailable() method
